--- a/pub/stylesheets/layout.css
+++ b/pub/stylesheets/layout.css
@@ -2,12 +2,12 @@ body
 {
 /*  background: url(/weblocks-common/pub/images/page/background.png);*/
   text-align: center;
-/*  background: #001D23; */
+  background: #001D23;
 }
 
 div.page-wrapper
 {
-/*  max-width: 90%;*/
+  max-width: 100em;
   min-width: 60em;
 
   margin: 0 auto;
@@ -17,7 +17,12 @@ div.page-wrapper
 /* IE 6 specific hacks (has layout and min-width)*/
 * html div.page-wrapper
 {
-  width: 70em;
+/*  width: 70em; */
+}
+
+div#dom1
+{
+    max-width:50em;
 }
 
 .page-wrapper .page-extra-top-1,
