Listing and editing poems seems to work now
Signed-off-by: Daniel Borchmann <daniel.borchmann@mailbox.tu-dresden.de>

--- a/pub/stylesheets/layout.css
+++ b/pub/stylesheets/layout.css
@@ -176,3 +176,32 @@ div#main-menu div.menu
   margin-top: 0;
 }
 
+/* Poems */
+
+div.poem-print
+{
+    width:30em;
+}
+
+div.poem-title
+{
+    padding-left:11em;
+    padding-bottom:2ex;
+    font-size:normal;
+}
+
+div.poem-body
+{
+    font-family: "urw chancery l","zapf chancery";
+    padding-left: 8em;
+    text-align: left;
+    white-space: pre;
+    font-size:normal;
+}
+
+div.poem-author
+{
+    padding-top:2ex;
+    text-align:right;
+    font-size:small;
+}
