Rework rendering of poems
This not done using views anymore but a custom widget called
«standard-poem-widget» which represents the poem in the same
way as the poem-view did before.  This is actually better
since the code for rendering the poem is now with the widget,
and not somewhere burried in view code.

Signed-off-by: Daniel Borchmann <daniel.borchmann@mailbox.tu-dresden.de>

--- a/pub/stylesheets/layout.css
+++ b/pub/stylesheets/layout.css
@@ -17,7 +17,7 @@ div.page-wrapper
 /* IE 6 specific hacks (has layout and min-width)*/
 * html div.page-wrapper
 {
-/*  width: 70em; */
+  width: 70em;
 }
 
 div.page-wrapper p
@@ -178,7 +178,7 @@ div#main-menu div.menu
 
 /* Poems */
 
-div.poem-print
+div.standard-poem
 {
     width:30em;
 }
