correctly update updated poems
Signed-off-by: Daniel Borchmann <daniel.borchmann@mailbox.tu-dresden.de>

--- a/pub/stylesheets/layout.css
+++ b/pub/stylesheets/layout.css
@@ -180,7 +180,7 @@ div#main-menu div.menu
 
 /* Poems */
 
-div.standard-poem
+div.standard-poem-widget
 {
     font-family: Georgia,Palatino,Palatino Linotype,FreeSerif,serif;
     width:30em;
