change the way folded poems are represented by css
Signed-off-by: Daniel Borchmann <daniel.borchmann@mailbox.tu-dresden.de>

--- a/pub/stylesheets/layout.css
+++ b/pub/stylesheets/layout.css
@@ -205,3 +205,25 @@ div.poem-author
     padding-top:2ex;
     text-align:right;
 }
+
+div.dismiss-button
+{
+    text-align:right;
+}
+
+div.folded-poem
+{
+    display:table;
+}
+
+div.folded-poem div.poem-description
+{
+    display:table-cell;
+    width:100%;
+}
+
+div.folded-poem div.show-button
+{
+    display:table-cell;
+    text-align:right;
+}
