--- a/pub/stylesheets/layout.css
+++ b/pub/stylesheets/layout.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: 'freemono';
   src: url('/pub/fonts/FreeMono.otf');
@@ -16,17 +15,18 @@
 
 body
 {
-  background-image: url(/pub/images/moon-from-earth.jpg);
-  background-attachment: fixed;
-  background-position: center center;
-  background-repeat: repeat;
-  font-family: 'freesans', helvetica, sans-serif;
-  text-align: center;
+    background-image: url(/pub/images/moon-from-earth.jpg);
+    background-attachment: fixed;
+    background-position: center center;
+    background-repeat: repeat;
+    font-family: Cardo, freeserif;
+    text-align: center;
+    font-size:22px;
 }
 
 div.page-wrapper
 {
-  width: 60em;
+  width: 45em;
   margin: 0 auto;
   text-align: left;
 }
@@ -79,7 +79,7 @@ div#root, .dialog-body, .dialog h1
 div#root
 {
   padding: 3em;
-  min-height: 60ex;
+  min-height: 45ex;
   background-image: url("/pub/images/transparent.png");
 
 }
@@ -135,8 +135,9 @@ div#main-menu div.menu
 }
 
 .mainheader {
-  font-family: 'freemono';
-  font-size: 170%;
+    font-family: freemono;
+    font-weight: bold;
+    font-size: 170%;
 }
 
 .header
@@ -205,15 +206,16 @@ div#main-menu div.menu
 
 div.standard-poem-widget
 {
-    font-family: freeserif,Georgia,Palatino,Palatino Linotype,FreeSerif,serif;
+    font-family: Cardo,freeserif,Georgia,Palatino,Palatino Linotype,FreeSerif,serif;
     width:30em;
-    font-size:18px;
 }
 
 div.poem-title
 {
     padding-left:6em;
     padding-bottom:2ex;
+    font-style: italic;
+    font-size: 120%;
 }
 
 div.poem-body
@@ -225,6 +227,7 @@ div.poem-body
 div.poem-author
 {
     padding-top:2ex;
+    font-size:80%;
     text-align:right;
 }
 
