More CSS cleanup
Signed-off-by: Daniel Borchmann <daniel.borchmann@mailbox.tu-dresden.de>

--- a/pub/stylesheets/main.css
+++ b/pub/stylesheets/main.css
@@ -44,40 +44,11 @@ img
   padding-left: 0.4em;
 }
 
-.view h1, .view fieldset h1, .table table caption, div.empty p,
-.view .empty-navigation, .view ul li, .view fieldset ul li,
-.view table thead tr th,
-.view fieldset div.submit, .view div.submit,
-.long-form fieldset .validation-errors-summary h2.error-count,
-.form fieldset .validation-errors-summary .non-field-validation-errors
-{
-    /* border-top: 1px solid #fcfef6; */
-}
-
-.view h1, .view fieldset h1, .table table caption, div.empty p,
-.view .empty-navigation, .view ul li, .view fieldset ul li,
-.view table thead tr th,
-.view fieldset div.submit, .view div.submit,
-.long-form fieldset .validation-errors-summary,
-.form fieldset .validation-errors-summary .non-field-validation-errors
-{
-    /* border-bottom: 1px solid #dbeac1; */
-}
-
-.view h1, .view fieldset h1, .table table caption, div.empty p,
-.view .empty-navigation, .view ul, .view fieldset ul, .table table,
-.view fieldset div.submit, .view div.submit,
-.long-form fieldset .validation-errors-summary h2.error-count
-{
-    /* background:#ecf8d7; */
-}
-
 h1, h2
 {
-  font-size: large;
+  font-size: 120%;
   color: #29364F;
   font-weight: bold;
-  font-family: Garamond, New York, serif;
   margin-top: 0;
 }
 
@@ -177,7 +148,7 @@ input[type=hidden]
 }
 
 /* Close button */
-span.close-button 
+span.close-button
 {
   display: block;
   width: 15px;
@@ -231,7 +202,6 @@ div.empty p span.caption
 {
   color: #29364F;
   font-weight: bold;
-  font-family: Garamond, New York, serif;
 }
 
 .collapsible-heading {
@@ -258,4 +228,3 @@ div.empty p span.caption
   font-size:small;
   color:gray;
 }
-
