Readding my old essays
not quite sure I still like them, but they look good on the screen *cough*

Signed-off-by: Daniel Borchmann <daniel.borchmann@mailbox.tu-dresden.de>

--- a/pub/stylesheets/layout.css
+++ b/pub/stylesheets/layout.css
@@ -162,3 +162,28 @@ div.poem-selector hr {
     margin-left: auto;
     margin-right: auto;
 }
+
+/* Essays */
+
+div.essays div.table-of-contents a {
+    text-decoration: none;
+}
+
+div.essays div.table-of-contents ul li {
+    list-style-type: decimal;
+}
+
+div.essays div.texts hr {
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+
+div.essays div.texts div.footnotes hr {
+    color: #DDD;
+    width: 90%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0cm;
+    margin-bottom: 0cm;
+}
