Table alignment for interal page
Signed-off-by: Daniel Borchmann <daniel.borchmann@mailbox.tu-dresden.de>

--- a/pub/stylesheets/layout.css
+++ b/pub/stylesheets/layout.css
@@ -93,6 +93,10 @@ div#main-menu div.menu
     color:#DDD;
 }
 
+table.internal-data td {
+    vertical-align: top;
+}
+
 /* Poems */
 
 div.standard-poem-widget
