--- a/pub/stylesheets/layout.css
+++ b/pub/stylesheets/layout.css
@@ -118,15 +118,16 @@ div.standard-poem-widget
 
 div.poem-title
 {
-    margin-left:4em;
     margin-bottom:2ex;
     font-style: italic;
     font-size: 120%;
+    text-align: center;
 }
 
 div.poem-body
 {
     text-align: left;
+    margin-left: 5em;
 }
 
 div.poem-author
