More fun with CSS
it is fun, actually …

Signed-off-by: Daniel Borchmann <daniel.borchmann@mailbox.tu-dresden.de>

--- a/pub/stylesheets/layout.css
+++ b/pub/stylesheets/layout.css
@@ -127,8 +127,11 @@ div.poem-title
 div.poem-body
 {
     text-align: left;
-    margin-left: 5em;
     white-space: pre;
+}
+
+div.poem-selector div.poem-body {
+    margin-left: 5em;
 }
 
 div.poem-author
